--- a/vke/CVKL.csproj
+++ b/vke/CVKL.csproj
@@ -19,6 +19,7 @@
     <AssemblyName>CVKL</AssemblyName>
     <OutputPath>$(SolutionDir)build\$(Configuration)\</OutputPath>              
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>        
+    
   </PropertyGroup>
     
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -26,11 +27,12 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>    
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <DefineConstants>_RENDERDOC;NETSTANDARD;NETSTANDARD2_0;DEBUG;NETFRAMEWORK;NET471</DefineConstants>    
+    <DefineConstants>MEMORY_POOLS;NETSTANDARD;NETSTANDARD2_0;DEBUG;NETFRAMEWORK;NET471</DefineConstants>    
   </PropertyGroup>
     
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
+    <DefineConstants>MEMORY_POOLS</DefineConstants>    
   </PropertyGroup>
       
   <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
