--- a/samples/tests/tests.csproj
+++ b/samples/tests/tests.csproj
@@ -1,8 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$(RootDirectory)netfx.props" />
-    
   <ItemGroup>
-    <PackageReference Include="glTF2Loader" Version="1.1.3-alpha" />
-  </ItemGroup>        
-  
+    <Folder Include="shaders\" />
+  </ItemGroup>
 </Project>
