--- a/samples/TexturedCube/TexturedCube.csproj
+++ b/samples/TexturedCube/TexturedCube.csproj
@@ -1,4 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$(RootDirectory)netfx.props" />    
+  <ItemGroup>
+    <PackageReference Include="vkvg.net" Version="0.2.2-beta" />
+  </ItemGroup>       
 </Project>
 
