--- a/samples/deferred/deferred.csproj
+++ b/samples/deferred/deferred.csproj
@@ -8,18 +8,22 @@
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">    
         <DefineConstants>TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0;MEMORY_POOLS;WITH_SHADOWS;_WITH_VKVG</DefineConstants>    
     </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugCrow|AnyCPU' ">    
+        <DefineConstants>TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0;MEMORY_POOLS;WITH_SHADOWS;_WITH_VKVG</DefineConstants>    
+    </PropertyGroup>
     
   <ItemGroup>    
     <Compile Include="EnvironmentPipeline.cs;deferredPbrRenderer.cs;shadowMapRenderer.cs" />
   </ItemGroup>     
 
-  <ItemGroup Condition="'$(Configuration)' == 'DebugCrow' ">    
+
+  <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'DebugCrow|AnyCPU' ">    
     <Compile Include="../common/CrowWin.cs" />
     <Compile Include="main-crow.cs" />
     <EmbeddedResource Include="ui\**\*.*">
       <LogicalName>deferred.%(Filename)%(Extension)</LogicalName>
     </EmbeddedResource>                
-  </ItemGroup>    
+  </ItemGroup>  
     
   <ItemGroup Condition="$(Configuration) != 'DebugCrow' ">
     <Compile Include="main.cs" />
@@ -28,6 +32,6 @@
     
   <ItemGroup>
     <PackageReference Include="Crow.VK" Version="0.9.0-beta" />
-  </ItemGroup> 
-    
+  </ItemGroup>
+     
 </Project>
