--- a/samples/Directory.Build.props
+++ b/samples/Directory.Build.props
@@ -30,7 +30,7 @@
 	</ItemGroup>    
 	
 	<ItemGroup>
-		<PackageReference Include="Vulkan" Version="0.1.3" />        
+		<PackageReference Include="Vulkan" Version="0.1.4-beta" />        
 	</ItemGroup>    
 
 	<ItemGroup>    
