--- a/samples/compute/compute.csproj
+++ b/samples/compute/compute.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
               
   <ItemGroup>    
-    <Compile Include="delaunay.cs" /> 
+    <Compile Include="test.cs" /> 
   </ItemGroup>     
 </Project>
