--- a/vke/CVKL.csproj
+++ b/vke/CVKL.csproj
@@ -33,26 +33,27 @@
     <DefineConstants>MEMORY_POOLS</DefineConstants>    
   </PropertyGroup>
       
-  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
+<!--  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
     <Reference Include="System" />
     <Reference Include="System.Runtime" />        
     <Reference Include="System.Core" />
-  </ItemGroup>
+  </ItemGroup>-->
   <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
     <PackageReference Include="System.Numerics.Vectors" Version="4.6.0-preview4.19212.13" />
   </ItemGroup>    
   <ItemGroup>
     <PackageReference Include="glTF2Loader" Version="1.1.3-alpha" />
-    <PackageReference Include="Vulkan" Version="0.1.4-beta" />        
+    <PackageReference Include="Vulkan" Version="0.1.4-beta" />
+<!--        <ProjectReference Include="$(SolutionDir)SpirVTask\SpirVTasks.csproj" />-->
   </ItemGroup>
   <ItemGroup>        
-    <None Remove="shaders\**\*.frag;shaders\**\*.vert;shaders\**\*.comp;shaders\**\*.geom" />
-    <GLSLShader Include="shaders\**\*.frag;shaders\**\*.vert;shaders\**\*.comp;shaders\**\*.geom" />  
     <Compile Remove="Properties\AssemblyInfo.cs;src\Renderer.cs;src\QueueFamily.cs" />
   </ItemGroup>
     
   <ItemGroup>
     <Folder Include="src\base\" />
   </ItemGroup>
-  <Import Project="$(SolutionDir)spirv.targets" /> 
+  <ItemGroup>
+<!--    -->
+  </ItemGroup>  
 </Project>
