--- a/vke/CVKL.csproj
+++ b/vke/CVKL.csproj
@@ -6,7 +6,7 @@
     <Product>CVKL</Product>
     <PackageId>CVKL</PackageId>
     <PackageTags>C# vulkan game library compute glfw</PackageTags>    
-    <PackageVersion>$(AssemblyVersion)-beta</PackageVersion>
+    <PackageVersion>$(AssemblyVersion)</PackageVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/jpbruyere/vk.net/blob/master/README.md</PackageProjectUrl>
@@ -43,7 +43,7 @@
   </ItemGroup>    
   <ItemGroup>
     <PackageReference Include="glTF2Loader" Version="1.1.3-alpha" />
-    <PackageReference Include="Vulkan" Version="0.1.4-beta" />
+    <PackageReference Include="Vulkan" Version="0.1.4" />
 <!--        <ProjectReference Include="$(SolutionDir)SpirVTask\SpirVTasks.csproj" />-->
   </ItemGroup>
   <ItemGroup>        
