--- a/SpirVTasks/SpirVTasks.csproj
+++ b/SpirVTasks/SpirVTasks.csproj
@@ -2,20 +2,23 @@
     <PropertyGroup>
         <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
         <AssemblyVersion>0.1.6</AssemblyVersion>
+        <Description>MSBuild addon to compile and embed spirV shaders</Description>
 
         <PackageId>SpirVTasks</PackageId>
-        <PackageTags>msbuild vulkan spirv glsl addons</PackageTags>    
+        <PackageTags>vulkan msbuild spirv glsl addons</PackageTags>    
         <PackageVersion>$(AssemblyVersion)-beta</PackageVersion>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
-        <PackageProjectUrl>https://github.com/jpbruyere/vk.net/blob/master/README.md</PackageProjectUrl>
+        <PackageProjectUrl>https://github.com/jpbruyere/vk.net/blob/master/SpirVTasks/README.md</PackageProjectUrl>
         <License>MIT</License>
         <Authors>Jean-Philippe Bruyère</Authors>        
-        <IncludeDefaultNoneItems>false</IncludeDefaultNoneItems>
-		
+        <OutputPath>$(SolutionDir)build\$(Configuration)\</OutputPath>
+        
+        <IncludeDefaultNoneItems>false</IncludeDefaultNoneItems>		
 		<EnableDefaultContentItems>false</EnableDefaultContentItems>
 		<EnableDefaultNoneItems>false</EnableDefaultNoneItems>
 		<EnableDefaultCompileItems>true</EnableDefaultCompileItems>
+        
     </PropertyGroup>
     <ItemGroup>        
         <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.0.461" />
