--- a/samples/Model/Model.csproj
+++ b/samples/Model/Model.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$(RootDirectory)netfx.props" />     
   <ItemGroup>
-    <PackageReference Include="glTF2Loader" Version="1.1.3-alpha" />
-  </ItemGroup>    
+    <ProjectReference Include="..\..\CVKL.Addons\gltfLoader\gltfLoader.csproj" />
+  </ItemGroup>
 
 </Project>
