--- a/samples/pbr/pbr.csproj
+++ b/samples/pbr/pbr.csproj
@@ -8,7 +8,10 @@
   <ItemGroup>
     <PackageReference Include="vkvg.net" Version="0.2.2-beta" />
   </ItemGroup>    
-    
+	
+  <ItemGroup>
+    <ProjectReference Include="..\..\CVKL.Addons\gltfLoader\gltfLoader.csproj" />
+  </ItemGroup>    
   
   <ItemGroup>    
     <EmbeddedResource Include="ui\**\*.*">
