--- a/samples/datas/datas.csproj
+++ b/samples/datas/datas.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>        
         <ProjectGuid>{0819E729-64D0-4D96-B7A7-FFDE86639977}</ProjectGuid>        
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
     
     <ItemGroup>
