--- a/vke/CVKL.csproj
+++ b/vke/CVKL.csproj
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-	<Import Project="$(RootDirectory)netfx.props" />
+<!--	<Import Project="$(RootDirectory)netfx.props" />-->
 	<PropertyGroup>
 		<AssemblyName>CVKL</AssemblyName>
 		<Product>CVKL</Product>
@@ -19,6 +19,8 @@
 		<SynchReleaseVersion>false</SynchReleaseVersion>
 		<OutputPath>$(SolutionDir)build\$(Configuration)\</OutputPath>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		
+		<EnableDefaultNoneItems>false</EnableDefaultNoneItems>
 	</PropertyGroup>
 	
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -39,9 +41,13 @@
 	</ItemGroup>
 		
 	<ItemGroup>
+		<PackageReference Include="SpirVTasks" Version="0.1.9-beta" />
 		<PackageReference Include="Vulkan" Version="0.1.4" />
 	</ItemGroup>
 	<ItemGroup>
+		<GLSLShader Include="shaders\**\*.frag;shaders\**\*.vert;shaders\**\*.comp;shaders\**\*.geom">
+			<ResourceId>testRsID</ResourceId>
+		</GLSLShader>
 		<Compile Remove="Properties\AssemblyInfo.cs;src\Renderer.cs;src\QueueFamily.cs" />
 	</ItemGroup>
 </Project>
