--- a/CVKL.Addons/Directory.Build.props
+++ b/CVKL.Addons/Directory.Build.props
@@ -27,7 +27,7 @@
 	</PropertyGroup>  
 	
 	<ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">		
-		<ProjectReference Include="$(RootDirectory)vke\CVKL.csproj" />
+		<ProjectReference Include="$(RootDirectory)CVKL\CVKL.csproj" />
 	</ItemGroup>	
 	<ItemGroup >		
 		<PackageReference Include="CVKL" Version="0.1.7-beta" Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' "/>
