--- a/CVKL.Addons/Directory.Build.props
+++ b/CVKL.Addons/Directory.Build.props
@@ -25,15 +25,9 @@
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
 		<DefineConstants>NETSTANDARD;NETSTANDARD2_0;WITH_SHADOWS;_WITH_VKVG</DefineConstants>    
 	</PropertyGroup>  
-	
-	<ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">		
-		<ProjectReference Include="$(RootDirectory)CVKL\CVKL.csproj" />
-	</ItemGroup>	
-	<ItemGroup >		
-		<PackageReference Include="CVKL" Version="0.1.7-beta" Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' "/>
-	</ItemGroup>	
-	
+		
 	<ItemGroup>
+		<PackageReference Include="CVKL" Version="0.1.7-beta" />
 		<PackageReference Include="SpirVTasks" Version="0.1.9-beta" />        
 		<PackageReference Include="Vulkan" Version="0.1.4" />
 	</ItemGroup>    
