--- a/VK/vulkan.csproj
+++ b/VK/vulkan.csproj
@@ -2,7 +2,7 @@
   <Import Project="$(RootDirectory)netfx.props" />
   <PropertyGroup>   
     <Copyright></Copyright>
-    <AssemblyVersion>0.1.4</AssemblyVersion>
+    <AssemblyVersion>0.1.5</AssemblyVersion>
     <AssemblyName>VK</AssemblyName>
     <Description>C# vulkan binding</Description>
     <Company></Company>
@@ -10,10 +10,10 @@
         
     <PackageId>Vulkan</PackageId>
     <PackageTags>C# vulkan net binding</PackageTags>    
-    <PackageVersion>$(AssemblyVersion)</PackageVersion>        
+    <PackageVersion>$(AssemblyVersion)-beta</PackageVersion>        
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/jpbruyere/vk.net/blob/master/README.md</PackageProjectUrl>
-    <!--<PackageIconUrl>https://github.com/KhronosGroup/glTF/blob/master/specification/figures/gltf.png</PackageIconUrl>-->
+    <PackageIconUrl>https://github.com/jpbruyere/vk.net/blob/master/vk.net-32.png</PackageIconUrl>
     <SynchReleaseVersion>false</SynchReleaseVersion>
     <OutputPath>$(SolutionDir)build\$(Configuration)\</OutputPath>
   </PropertyGroup>
@@ -33,23 +33,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
     
-<!--  <ItemGroup>
-    <Compile Include="../vk.generator/bin/$(Configuration)/$(TargetFramework)/*.cs">
-      <Link>generated\%(Filename)%(Extension)</Link>
-    </Compile>
-  </ItemGroup> -->
-    
   <Target Name="generate" BeforeTargets="BeforeCompile">
     <Exec Condition="$(OS) == 'Windows_NT'" Command="$(SolutionDir)vk.generator/bin/$(Configuration)/net471/vk.generator.exe" WorkingDirectory="$(SolutionDir)vk.generator/bin/$(Configuration)/$(TargetFramework)/" ConsoleToMSBuild="true" EchoOff="true">
         <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
     </Exec>
-        
-    <!--<Exec Condition="$(OS) != 'Windows_NT' and $(TargetFramework.StartsWith('net4'))" Command="mono $(SolutionDir)vk.generator/bin/$(Configuration)/$(TargetFramework)/vk.generator.exe" WorkingDirectory="$(SolutionDir)vk.generator/bin/$(Configuration)/$(TargetFramework)/" ConsoleToMSBuild="true" EchoOff="true">
-        <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
-    </Exec>  
-    <Exec Condition="$(OS) != 'Windows_NT' and $(TargetFramework.StartsWith('netcore'))" Command="dotnet $(SolutionDir)vk.generator/bin/$(Configuration)/$(TargetFramework)/vk.generator.dll" WorkingDirectory="$(SolutionDir)vk.generator/bin/$(Configuration)/$(TargetFramework)/" ConsoleToMSBuild="true" EchoOff="true">
-        <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
-    </Exec>-->  
     <Exec Condition="$(OS) != 'Windows_NT'" Command="mono $(SolutionDir)vk.generator/bin/$(Configuration)/net471/vk.generator.exe" WorkingDirectory="$(SolutionDir)vk.generator/bin/$(Configuration)/$(TargetFramework)/" ConsoleToMSBuild="true" EchoOff="true">
         <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
     </Exec>
@@ -62,13 +49,6 @@
     <Exec Condition="$(OS) == 'Windows_NT'" Command="$(SolutionDir)vk.rewrite/bin/$(Configuration)/net471/vk.rewrite.exe $(OutputPath)VK.dll" ConsoleToMSBuild="true" EchoOff="true">
         <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
     </Exec>
-        
-    <!--<Exec Condition="$(OS) != 'Windows_NT' and $(TargetFramework.StartsWith('net4'))" Command="mono $(SolutionDir)vk.rewrite/bin/$(Configuration)/$(TargetFramework)/vk.rewrite.exe $(OutputPath)VK.dll" ConsoleToMSBuild="true" EchoOff="true">
-        <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
-    </Exec>        
-    <Exec Condition="$(OS) != 'Windows_NT' and $(TargetFramework.StartsWith('netcore'))" Command="dotnet $(SolutionDir)vk.rewrite/bin/$(Configuration)/$(TargetFramework)/vk.rewrite.dll $(OutputPath)VK.dll" ConsoleToMSBuild="true" EchoOff="true">
-        <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
-    </Exec>-->     
     <Exec Condition="$(OS) != 'Windows_NT'" Command="mono $(SolutionDir)vk.rewrite/bin/$(Configuration)/net471/vk.rewrite.exe $(OutputPath)VK.dll" ConsoleToMSBuild="true" EchoOff="true">
         <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
     </Exec>        
