--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,15 +1,15 @@
 <Project>
-    <PropertyGroup>
-        <RootDirectory>$(MSBuildThisFileDirectory)</RootDirectory>
-        <Deterministic>true</Deterministic>
-        
-        <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
-        
+	<PropertyGroup>
+		<RootDirectory>$(MSBuildThisFileDirectory)</RootDirectory>
+		<Deterministic>true</Deterministic>
+
+		<!--<TargetFrameworks>net471;netcoreapp2.2</TargetFrameworks>-->
+
 		<RepositoryUrl>https://github.com/jpbruyere/vk.net</RepositoryUrl>
 		<License>MIT</License>
-	    <Authors>Jean-Philippe Bruyère</Authors>
-	    
-	    <LangVersion>7.2</LangVersion>
-	    
-    </PropertyGroup>
+		<Authors>Jean-Philippe Bruyère</Authors>
+
+		<LangVersion>7.2</LangVersion>
+
+	</PropertyGroup>
 </Project>
