--- a/VK/vulkan.csproj
+++ b/VK/vulkan.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>   
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Copyright></Copyright>
-    <AssemblyVersion>0.1.5</AssemblyVersion>
+    <AssemblyVersion>0.1.6</AssemblyVersion>
     <AssemblyName>VK</AssemblyName>
     <Description>C# vulkan binding</Description>
     <Company></Company>
@@ -12,7 +13,7 @@
     <PackageVersion>$(AssemblyVersion)-beta</PackageVersion>        
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/jpbruyere/vk.net/blob/master/README.md</PackageProjectUrl>
-    <PackageIconUrl>https://github.com/jpbruyere/vk.net/blob/master/vk.net-128.png</PackageIconUrl>
+    <PackageIcon>vk.net-64.png</PackageIcon>
     <SynchReleaseVersion>false</SynchReleaseVersion>
     <OutputPath>$(SolutionDir)build\$(Configuration)\</OutputPath>
   </PropertyGroup>
@@ -23,6 +24,11 @@
   <ItemGroup>
     <ProjectReference Include="..\vk.generator\vk.generator.csproj" PrivateAssets="All" />
     <ProjectReference Include="..\vk.rewrite\vk.rewrite.csproj" PrivateAssets="All" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="vk.net-64.png">
+      <IncludeInPackage>true</IncludeInPackage>
+    </None>
   </ItemGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
