--- a/vk.generator/vk.generator.csproj
+++ b/vk.generator/vk.generator.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>    
+    <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
     <OutputType>Exe</OutputType>        
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-            
+    
   <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))"> 
     <Reference Include="System" />
   </ItemGroup>          
